[gd_scene load_steps=9 format=3 uid="uid://fdtou3s0nwts"]

[ext_resource type="Script" path="res://game/game.gd" id="1_ixp5m"]
[ext_resource type="PackedScene" uid="uid://bu3aixg7n3elv" path="res://game/player.tscn" id="1_ru1y4"]
[ext_resource type="PackedScene" uid="uid://5elrqae6s34u" path="res://game/tree.tscn" id="2_4s281"]

[sub_resource type="Curve2D" id="Curve2D_43sm6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -45, -109, 0, 0, 0, 0, 1354, -106, 0, 0, 0, 0, 1356, 792, 0, 0, 0, 0, 650, 792, 0, 0, 0, 0, -47, 790, 0, 0, 0, 0, -45, -109)
}
point_count = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bic6t"]
bg_color = Color(0.913725, 0.913725, 0.913725, 0.858824)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sc23h"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fs7gt"]
bg_color = Color(0, 0.8, 0.494118, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lc5dm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Game" type="Node2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_ixp5m")

[node name="Player" parent="." instance=ExtResource("1_ru1y4")]
position = Vector2(631, 383)
platform_floor_layers = 4294901760

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-630, -383)
curve = SubResource("Curve2D_43sm6")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-45, -109)
rotation = 0.00214439

[node name="LabelInstruction" type="Label" parent="."]
offset_left = 429.0
offset_top = 174.0
offset_right = 772.0
offset_bottom = 261.0
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548963, 1)
theme_override_font_sizes/font_size = 30
text = "Use WASD to Move
Press Left-click to shoot"

[node name="Tree" parent="." instance=ExtResource("2_4s281")]
position = Vector2(251, 219)

[node name="Tree2" parent="." instance=ExtResource("2_4s281")]
position = Vector2(163, 511)

[node name="Tree3" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1007, 611)

[node name="Tree4" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1003, 173)

[node name="Tree5" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1099, 312)

[node name="Tree6" parent="." instance=ExtResource("2_4s281")]
position = Vector2(865, 259)

[node name="Tree7" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1324, 80)

[node name="Tree8" parent="." instance=ExtResource("2_4s281")]
position = Vector2(-143, -2)

[node name="Tree9" parent="." instance=ExtResource("2_4s281")]
position = Vector2(-54, 270)

[node name="Tree10" parent="." instance=ExtResource("2_4s281")]
position = Vector2(710, 750)

[node name="Tree11" parent="." instance=ExtResource("2_4s281")]
position = Vector2(590, 807)

[node name="Tree12" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1322, 540)

[node name="Tree13" parent="." instance=ExtResource("2_4s281")]
position = Vector2(569, -40)

[node name="Tree14" parent="." instance=ExtResource("2_4s281")]
position = Vector2(-205, 678)

[node name="Tree15" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1031, -28)

[node name="Tree16" parent="." instance=ExtResource("2_4s281")]
position = Vector2(71, 596)

[node name="Tree17" parent="." instance=ExtResource("2_4s281")]
position = Vector2(1253, 825)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUD"]
offset_left = 9.0
offset_top = 11.0
offset_right = 207.0
offset_bottom = 168.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bic6t")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 185.0
offset_bottom = 138.0

[node name="Player HP" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.12549, 0.12549, 0.12549, 0.870588)
theme_override_font_sizes/font_size = 25
text = "HP
"

[node name="PlayerProgressBar" type="ProgressBar" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sc23h")
theme_override_styles/fill = SubResource("StyleBoxFlat_fs7gt")
value = 100.0
show_percentage = false

[node name="LabelPoint" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.12549, 0.12549, 0.12549, 0.870588)
theme_override_font_sizes/font_size = 20
text = "Total Mob: 0"

[node name="LabelLevel" type="Label" parent="HUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.12549, 0.12549, 0.12549, 0.870588)
theme_override_font_sizes/font_size = 20
text = "Level: 1"

[node name="Tiles" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Tiles"]
offset_right = 1284.0
offset_bottom = 723.0
color = Color(0.874113, 0.967028, 0.949696, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.72549)

[node name="GameOverLabel" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "Game Over"

[node name="PausedScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="PausedScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.72549)

[node name="PauseLabel" type="Label" parent="PausedScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "Paused"

[node name="ResumeButton" type="Button" parent="PausedScreen"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -299.0
offset_right = 114.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_lc5dm")
text = "Resume"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PausedScreen/ResumeButton" to="." method="_on_resume_button_pressed"]
